crates/data-dict/tests/snapshots/validate_spec__constraints_s23_untyped_column.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: a
        type: number
        examples: [1, 2]
      - name: notes
    constraints:
      - assert: notes > a
────────────────────────────────────────
error[S23]: An assertion may only use columns with a declared `type`.
  --> dict.yaml:11:17
   |
LL |   - name: t
...
LL |       - assert: notes > a
   |                 ^^^^^ column `notes` has no declared type
